@@ -1,8 +1,6 @@
 // Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.athenz.instanceproviderservice.identitydocument;
 
-
-import com.google.common.collect.ImmutableSet;
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.ApplicationName;
@@ -24,12 +22,14 @@ import com.yahoo.vespa.hosted.provision.Node;
 import com.yahoo.vespa.hosted.provision.NodeRepository;
 import com.yahoo.vespa.hosted.provision.node.Allocation;
 import com.yahoo.vespa.hosted.provision.node.Generation;
+import com.yahoo.vespa.hosted.provision.node.IP;
 import com.yahoo.vespa.hosted.provision.testutils.MockNodeFlavors;
 import org.hamcrest.Matchers;
 import org.junit.Test;
 
 import java.util.HashSet;
 import java.util.Optional;
+import java.util.Set;
 
 import static com.yahoo.vespa.hosted.athenz.instanceproviderservice.TestUtils.getAthenzProviderConfig;
 import static org.junit.Assert.assertEquals;
@@ -58,17 +58,15 @@ public class IdentityDocumentGeneratorTest {
                                                Generation.initial(),
                                                false);
         Node parentNode = Node.create("ostkid",
-                                      ImmutableSet.of("127.0.0.1"),
-                                      new HashSet<>(),
+                                      new IP.Config(Set.of("127.0.0.1"), Set.of()),
                                       parentHostname,
                                       Optional.empty(),
                                       Optional.empty(),
                                       new MockNodeFlavors().getFlavorOrThrow("default"),
                                       NodeType.host);
-        Node containerNode = Node.createDockerNode(ImmutableSet.of("::1"),
-                                                   new HashSet<>(),
+        Node containerNode = Node.createDockerNode(Set.of("::1"),
                                                    containerHostname,
-                                                   Optional.of(parentHostname),
+                                                   parentHostname,
                                                    new MockNodeFlavors().getFlavorOrThrow("default").resources(),
                                                    NodeType.tenant)
                 .with(allocation);
